--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomePage"
+        <activity
+            android:name=".HomePage"
             android:parentActivityName=".MainActivity">
+        </activity>
+        <activity
+            android:name=".CreateWorkout"
+            android:parentActivityName=".HomePage">
         </activity>
     </application>
 
